# deepchoice-agent

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml
benchmarks/: __init__.py  annotated_cases.json  metrics.py  run_baseline.py
chroma_kb/: setup.py
docs/superpowers/plans/: 2026-07-06-DeepChoice-plan.md  2026-07-07-DeepChoice-clarify-plan.md
docs/superpowers/specs/: 2026-07-06-DeepChoice-design.md  2026-07-06-DeepChoice-方案A-新对话起点.md  2026-07-07-DeepChoice-clarify-module-design.md
frontend/: app.py
notes/: 导读-01-数据与检索.md  导读-02-Agent管道-上.md  导读-03-Agent管道-中.md  导读-04-Agent管道-下.md  导读-05-澄清与输出.md
scripts/: joint_eval.py
src/deepchoice/: state.py  task.py
src/deepchoice/agents/: conclusion_synthesizer.py  conflict_detector.py  evidence_chain.py  multi_retriever.py  orchestrator.py  query_adapter.py  query_analyzer.py  report_generator.py  self_reviewer.py  source_evaluator.py
src/deepchoice/clarify/: clarification_agent.py  session_manager.py
src/deepchoice/formats/: comparison_matrix.py  evidence_first.py  what_why_how.py
src/deepchoice/retrievers/: __init__.py  arxiv_api.py  (+6 more)
tests/: conftest.py  test_dedup.py  test_eval.py  test_evidence_chain.py  test_pipeline.py  test_query_analyzer.py  test_retrievers.py  test_source_evaluator.py  test_state.py
tests/clarify/: test_clarification_agent.py  test_clarify_integration.py  test_clarify_routes.py  test_session_manager.py
tests/test_cases/: eval_100.json  generator.py  known_cases.json  taxonomy.json
(+7 files in other folders)
